--- a/MNABprojT2/MNABprojT2.vcxproj
+++ b/MNABprojT2/MNABprojT2.vcxproj
@@ -130,7 +130,7 @@
     <ClCompile Include="Main.c" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\..\Desktop\Makefile" />
+    <None Include="..\..\..\..\Desktop\Makefile.mak" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
